--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,725 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+}
+
+%box_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    width: 90%;
+    margin: 124px auto 0px;
+    color: #4B321D;
+    font-size: 80px;
+}
+
+.content {
+    width: 100%;
+    display: flex;
+    background-color: whitesmoke;
+    flex-direction: column;
+}
+
+.content_nav {
+    width: 90%;
+    display: flex;
+    margin: 40px auto 0px;
+    height: 48px;
+    align-items: center;
+    gap: 580px;
+
+    img {
+        width: 110px;
+        height: 41px;
+    }
+
+    ul {
+        display: flex;
+        gap: 36px;
+
+        a {
+            color: #4B321D;
+            font-size: 18px;
+            text-decoration: none;
+        }
+    }
+
+    span {
+        display: none;
+    }
+}
+
+.picture {
+    width: 95%;
+    margin: 136px auto 0px;
+}
+
+.button_1 button {
+    padding: 10px 17px;
+}
+
+.button_1 {
+    margin: 56px 60px 0px 82px;
+}
+
+.box {
+    width: 90%;
+    margin: 100px auto 0px;
+    display: flex;
+    gap: 100px;
+
+    .right_box {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 56px;
+    }
+}
+
+.right_box_text {
+    color: #4B321D;
+    font-size: 38px;
+}
+
+.right_box_btn {
+    width: 151px;
+    padding: 10px 17px;
+    border-radius: 3px;
+    border: 2px solid #4B321D;
+}
+
+button {
+    color: #4B321D;
+    font-size: 20px;
+    border-radius: 3px;
+    border: 2px solid #4B321D;
+}
+
+.box2 {
+    width: 90%;
+    margin: 89px auto 0px;
+    display: flex;
+    gap: 100px;
+
+    .left_box {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 45px;
+    }
+}
+
+.left_box_text {
+    color: #4B321D;
+    font-size: 38px;
+}
+
+.left_box_btn {
+    width: 113px;
+    padding: 10px 17px;
+    border-radius: 3px;
+    border: 2px solid #4B321D;
+}
+
+.m-box {
+    width: 95%;
+    padding: 84px 154px;
+    background-color: #4B321D;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    margin: 90px auto 0px;
+    border-radius: 16px;
+}
+
+.m-box_text {
+    font-size: 70px;
+}
+
+.m-box_pie {
+    font-size: 26px;
+}
+
+.footer {
+    width: 100%;
+    margin-top: 90px;
+    @extend %box_center;
+}
+
+.f-box {
+    width: 80%;
+    height: 70%;
+    display: flex;
+    gap: 35%;
+}
+
+.f_box1 {
+    // width: 20%;
+    font-size: 18px;
+    color: #4B321D;
+}
+
+.f_boxs {
+    display: flex;
+    width: 45%;
+    color: #4B321D;
+    font-size: 18px;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+.f_boxs1 {
+    // width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.f_boxs2 {
+    // width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.palma {
+    margin-top: 83px;
+}
+
+@media (max-width:447px) {
+    .content {
+        padding: 0 10px;
+
+        .content_nav {
+            display: flex;
+            justify-content: space-between;
+            gap: 0;
+
+            ul {
+                display: none;
+            }
+
+            span {
+                display: block;
+                font-size: 35px;
+            }
+        }
+
+        .picture {
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 22px;
+            margin-top: 40px;
+        }
+    }
+
+    .button_1 button {
+        font-size: 13px;
+    }
+
+    .button_1 {
+        margin: 20px;
+        width: 120px;
+    }
+
+    .box {
+        flex-direction: column;
+        gap: 0px;
+
+        .right_box {
+            width: 100%;
+            margin-top: 20px;
+            gap: 0px;
+
+            h3 {
+                font-size: 22px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 13px;
+                width: 120px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    .box2 {
+        flex-direction: column-reverse;
+        gap: 0px;
+
+        .left_box {
+            gap: 0px;
+            margin-top: 20px;
+            width: 100%;
+
+            h3 {
+                font-size: 22px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 13px;
+                width: 120px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+
+    .m-box {
+        padding: 20px 30px;
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+    }
+
+    .footer {
+        .f_box1 {
+            h4 {
+                font-size: 16px;
+            }
+
+            p {
+                font-size: 16px;
+            }
+        }
+
+        .f-box {
+            flex-direction: column;
+            gap: 20px;
+
+            .f_box1 {
+                .palma {
+                    margin-top: 30px;
+                }
+            }
+
+            .f_boxs {
+                display: flex;
+                gap: 30px;
+
+                .f_boxs2 {
+                    p {
+                        margin: 0px 1px;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:448px) and (max-width:769px) {
+    .content {
+        padding: 0 30px;
+
+        .content_nav {
+            display: flex;
+            justify-content: space-between;
+            gap: 0;
+
+            ul {
+                display: none;
+            }
+
+            span {
+                display: block;
+                font-size: 35px;
+            }
+        }
+
+        .picture {
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 25px;
+            margin-top: 40px;
+        }
+    }
+
+    .button_1 button {
+        font-size: 15px;
+    }
+
+    .button_1 {
+        margin: 20px;
+        width: 150px;
+    }
+
+    .box {
+        flex-direction: column;
+        gap: 0px;
+
+        .right_box {
+            width: 100%;
+            margin-top: 20px;
+            gap: 0px;
+
+            h3 {
+                font-size: 25px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 15px;
+                width: 120px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    .box2 {
+        flex-direction: column-reverse;
+        gap: 0px;
+
+        .left_box {
+            gap: 0px;
+            margin-top: 20px;
+            width: 100%;
+
+            h3 {
+                font-size: 25px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 13px;
+                width: 120px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+
+    .m-box {
+        padding: 20px 30px;
+
+        h2 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 20px;
+        }
+    }
+
+    .footer {
+        .f_box1 {
+            h4 {
+                font-size: 20px;
+            }
+
+            p {
+                font-size: 20px;
+            }
+        }
+
+        .f-box {
+            
+            gap: 70px;
+
+            .f_box1 {
+                .palma {
+                    margin-top: 50px;
+                }
+            }
+
+            .f_boxs {
+                display: flex;
+                gap: 30px;
+
+                .f_boxs2 {
+                    p {
+                        margin: 0px 1px;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:770px) and (max-width:990px) {
+    .content {
+        padding: 0 50px;
+
+        .content_nav {
+            display: flex;
+            justify-content: space-between;
+            gap: 0;
+
+            ul {
+                display: flex;
+            }
+
+            span {
+                display: none;
+            }
+        }
+
+        .picture {
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 30px;
+            margin-top: 40px;
+        }
+    }
+
+    .button_1 button {
+        font-size: 20px;
+    }
+
+    .button_1 {
+        margin: 20px;
+        width: 190px;
+    }
+
+    .box {
+        flex-direction: column;
+        gap: 0px;
+
+        .right_box {
+            width: 100%;
+            margin-top: 20px;
+            gap: 0px;
+
+            h3 {
+                font-size: 30px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 20px;
+                width: 150px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    .box2 {
+        flex-direction: column-reverse;
+        gap: 0px;
+
+        .left_box {
+            gap: 0px;
+            margin-top: 20px;
+            width: 100%;
+
+            h3 {
+                font-size: 30px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 15px;
+                width: 120px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+
+    .m-box {
+        padding: 20px 30px;
+
+        h2 {
+            font-size: 27px;
+        }
+
+        p {
+            font-size: 23px;
+        }
+    }
+
+    .footer {
+        .f_box1 {
+            h4 {
+                font-size: 23px;
+            }
+
+            p {
+                font-size: 23px;
+            }
+        }
+
+        .f-box {
+            
+            gap: 70px;
+
+            .f_box1 {
+                .palma {
+                    margin-top: 50px;
+                }
+            }
+
+            .f_boxs {
+                display: flex;
+                gap: 50px;
+
+                .f_boxs2 {
+                    p {
+                        margin: 0px 1px;
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:991px) and (max-width:1200px) {
+    .content {
+        padding: 0 60px;
+
+        .content_nav {
+            display: flex;
+            justify-content: space-between;
+            gap: 0;
+
+            ul {
+                display: flex;
+            }
+
+            span {
+                display: none;
+            }
+        }
+
+        .picture {
+            margin-top: 50px;
+        }
+
+        h1 {
+            font-size: 33px;
+            margin-top: 40px;
+        }
+    }
+
+    .button_1 button {
+        font-size: 23px;
+    }
+
+    .button_1 {
+        margin: 20px;
+        width: 200px;
+    }
+
+    .box {
+        flex-direction: column;
+        gap: 0px;
+
+        .right_box {
+            width: 100%;
+            margin-top: 20px;
+            gap: 0px;
+
+            h3 {
+                font-size: 33px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 23px;
+                width: 200px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    .box2 {
+        flex-direction: column-reverse;
+        gap: 0px;
+
+        .left_box {
+            gap: 0px;
+            margin-top: 20px;
+            width: 100%;
+
+            h3 {
+                font-size: 33px;
+                width: 100%;
+            }
+
+            button {
+                font-size: 18px;
+                width: 150px;
+                padding: 8px 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+
+    .m-box {
+        padding: 20px 30px;
+
+        h2 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 25px;
+        }
+    }
+
+    .footer {
+        .f_box1 {
+            h4 {
+                font-size: 26px;
+            }
+
+            p {
+                font-size: 26px;
+            }
+        }
+
+        .f-box {
+            
+            gap: 70px;
+
+            .f_box1 {
+                .palma {
+                    margin-top: 60px;
+                }
+            }
+
+            .f_boxs {
+                display: flex;
+                gap: 100px;
+
+                .f_boxs2 {
+                    p {
+                        margin: 0px 1px;
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
+    }
 }
